[gd_scene load_steps=9 format=3 uid="uid://cy6r4nqv5cqrp"]

[ext_resource type="Script" uid="uid://iwq38h5psqgs" path="res://Main/Scripts/monster_selection.gd" id="1_gy23r"]
[ext_resource type="Texture2D" uid="uid://brbitgx6w4vo7" path="res://assets/Icons/tap.png" id="2_dhfix"]
[ext_resource type="Texture2D" uid="uid://bmehgiaoondwh" path="res://assets/evoli_assets/Statue_Touch.PNG" id="2_vyeny"]
[ext_resource type="Texture2D" uid="uid://21xbd7kybxgw" path="res://assets/evoli_assets/Statue_Sight.PNG" id="4_nb1bh"]
[ext_resource type="Texture2D" uid="uid://bx45caat0kcot" path="res://assets/evoli_assets/Statue_Bat.PNG" id="5_3qm8c"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_gy23r"]
modulate_color = Color(1, 1, 1, 0)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_vyeny"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_nb1bh"]

[node name="MonsterSelection" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_gy23r")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1153.0
offset_bottom = 647.0
color = Color(1, 1, 1, 0.0588235)

[node name="Monster3" type="Button" parent="."]
layout_mode = 1
offset_left = 48.0
offset_top = 10.0
offset_right = 304.0
offset_bottom = 288.0
theme_override_styles/normal = SubResource("StyleBoxTexture_gy23r")

[node name="TextureRect3" type="TextureRect" parent="Monster3"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -203.0
offset_right = 53.0
offset_bottom = 555.0
grow_horizontal = 0
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_vyeny")

[node name="Tap3" type="Sprite2D" parent="Monster3/TextureRect3"]
position = Vector2(176, 308)
scale = Vector2(0.2, 0.2)
texture = ExtResource("2_dhfix")

[node name="Monster2" type="Button" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -126.0
offset_top = 20.0
offset_right = 130.0
offset_bottom = 281.0
grow_horizontal = 2
theme_override_styles/normal = SubResource("StyleBoxTexture_vyeny")

[node name="TextureRect3" type="TextureRect" parent="Monster2"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -277.0
offset_top = -7.0
offset_right = 178.0
offset_bottom = 527.0
grow_horizontal = 0
scale = Vector2(0.5, 0.5)
texture = ExtResource("4_nb1bh")

[node name="Tap3" type="Sprite2D" parent="Monster2/TextureRect3"]
position = Vector2(242, 296)
scale = Vector2(0.2, 0.2)
texture = ExtResource("2_dhfix")

[node name="Monster1" type="Button" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -379.0
offset_top = 5.0
offset_right = -123.0
offset_bottom = 296.0
grow_horizontal = 0
theme_override_styles/normal = SubResource("StyleBoxTexture_nb1bh")

[node name="TextureRect3" type="TextureRect" parent="Monster1"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -182.0
offset_top = -6.0
offset_right = 190.0
offset_bottom = 586.0
grow_horizontal = 0
scale = Vector2(0.5, 0.5)
texture = ExtResource("5_3qm8c")

[node name="Tap3" type="Sprite2D" parent="Monster1/TextureRect3"]
position = Vector2(226, 368)
scale = Vector2(0.2, 0.2)
texture = ExtResource("2_dhfix")

[node name="Select" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -114.0
offset_top = -152.0
offset_right = 181.0
offset_bottom = -7.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(0.8, 0.8)
theme_override_font_sizes/font_size = 100
text = "Select"

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -574.0
offset_top = 17.0
offset_right = 1714.0
offset_bottom = 154.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.5, 0.5)
theme_override_font_sizes/font_size = 100
text = "Current selection: "

[connection signal="pressed" from="Monster3" to="." method="_on_monster_3_pressed"]
[connection signal="pressed" from="Monster2" to="." method="_on_monster_2_pressed"]
[connection signal="pressed" from="Monster1" to="." method="_on_monster_1_pressed"]
[connection signal="pressed" from="Select" to="." method="_on_select_pressed"]
